--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <div class="row">
         <div class="card col-lg-4">
           <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5da42f4e8967d075754281.jpg"
             alt="image" />
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
@@ -109,9 +109,9 @@
 
           <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/391681/5cebc9770c22c015366946.png"
                 alt="image" />
-              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+              <p>BY <strong>ALEXANDER LAGUTA</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -145,7 +145,7 @@
         </div>
         <div class="card col-lg-4">
           <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            src="https://assets.awwwards.com/awards/media/cache/optimize/submissions/2019/10/5da7185debe7a481362568.jpg"
             alt="image" />
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
@@ -157,9 +157,9 @@
 
           <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/237982/5d700d5f2322d862267741.jpg"
                 alt="image" />
-              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+              <p>BY <strong>JULIO CESAR</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -183,7 +183,7 @@
       <div class="row">
         <div class="card col-lg-4">
           <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            src="https://assets.awwwards.com/awards/media/cache/optimize/submissions/2019/10/5dae06a7b738e428041512.jpg"
             alt="image" />
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
@@ -195,9 +195,9 @@
 
           <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/337715/5589e302c8d01.jpeg"
                 alt="image" />
-              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+              <p>BY <strong>OBLIO</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -207,7 +207,7 @@
         </div>
         <div class="card col-lg-4">
           <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            src="https://assets.awwwards.com/awards/media/cache/optimize/submissions/2019/10/5daebd8023376915888852.jpg"
             alt="image" />
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
@@ -219,9 +219,9 @@
 
           <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/766038/5d0798f5d05f8430727769.png"
                 alt="image" />
-              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+              <p>BY <strong>LUCKYDUCK</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -231,7 +231,7 @@
         </div>
         <div class="card col-lg-4">
           <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            src="https://assets.awwwards.com/awards/media/cache/optimize/submissions/2019/10/5daebd7606bed171509485.jpg"
             alt="image" />
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
@@ -243,9 +243,9 @@
 
           <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/439438/592c15d2761e1.png"
                 alt="image" />
-              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+              <p>BY <strong>MONOGRID</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -256,9 +256,9 @@
       </div>
       <div class="row m-t-50">
         <div class="card col-lg-4">
-          <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
-            alt="image" />
+          <video class="w-95" width="417" height="298" muted="" loop="" autoplay="">
+                <source src="https://assets.awwwards.com/awards/external/2019/10/5daf04a85e1cb606912453.mp4" data-src="https://assets.awwwards.com/awards/external/2019/10/5daf04a85e1cb606912453.mp4" type="video/mp4">
+            </video>
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
             <div class="info-meta row p-b-20">
@@ -281,7 +281,7 @@
         </div>
         <div class="card col-lg-4">
           <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
+            src="https://assets.awwwards.com/awards/media/cache/thumb_834_598/external/2019/10/5daec24f005db391907818.jpg"
             alt="image" />
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
@@ -293,9 +293,9 @@
 
           <div class="card-footer row w-95 p-t-10">
             <div class="f-left row">
-              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/235816/58ef996a46578.png"
+              <img class="m-r-10" src="https://assets.awwwards.com/awards/media/cache/thumb_user_70/avatar/57289/59344b35278f6.jpg"
                 alt="image" />
-              <p>BY <strong>CREATIVE NIGHTS</strong></p>
+              <p>BY <strong>AWWWARDS</strong></p>
             </div>
             <div class="f-right row">
               <div class="btn btn-blue">HM</div>
@@ -304,9 +304,9 @@
           </div>
         </div>
         <div class="card col-lg-4">
-          <img class="card-image w-95 m-b-10"
-            src="https://assets.awwwards.com/awards/media/cache/thumb_417_299/submissions/2019/10/5d937ce9d3c71788118848.png"
-            alt="image" />
+          <video class="w-95" width="417" height="298" muted="" loop="" autoplay="">
+                <source src="https://assets.awwwards.com/awards/external/2019/10/5da4978cea5b1507114569.mp4" data-src="https://assets.awwwards.com/awards/external/2019/10/5da4978cea5b1507114569.mp4" type="video/mp4">
+            </video>
           <div class="card-info w-95">
             <a class="p-t-20 p-b-20" href="#">Karel Komárek Family Fdn.</a>
             <div class="info-meta row p-b-20">
