--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <nav
       class="navbar-lg d-lg-block d-md-none d-sm-none container--fluid col-lg-12 fixed "
     >
-      <div class="row">
+      <div class="row p-l-40">
         <div class="col-lg-1">
           <ul class="row">
             <li><i class="fas fa-bars"></i></li>
@@ -49,7 +49,7 @@
           </ul>
         </div>
         <div class="col-lg-1">
-          <ul class="row">
+          <ul class="row p-l-20">
             <li><i class="fas fa-search"></i></li>
           </ul>
         </div>
@@ -72,7 +72,7 @@
     </nav>
 
     <nav class="fixed navbar-md d-lg-none container--fluid col-md-12 ">
-      <div class="row">
+      <div class="row p-l-40">
         <div class="col-lg-2 ">
           <ul class="row">
             <li><i class="fas fa-bars"></i></li>
@@ -86,7 +86,7 @@
           </div>
         </div>
         <div class="col-lg-2">
-          <ul class="row">
+          <ul class="row p-r-40">
             <li><i class="fas fa-search"></i></li>
           </ul>
         </div>
@@ -108,8 +108,8 @@
         </div>
       </div>
       <div class="hero-buttons p-b-50 row">
-        <div class="w-10 btn btn-green m-r-5">Visit site</div>
-        <div class="w-10 btn btn-red m-r-5">Collect</div>
+        <div class="col-lg-2 col-sm-3 btn btn-green m-r-5">Visit site</div>
+        <div class="col-lg-2 col-sm-3 btn btn-red m-r-5">Collect</div>
       </div>
     </header>
 
